fixed menu on mobile and scaling, made animation for burgermenu.

--- a/style.css
+++ b/style.css
@@ -104,14 +104,21 @@ h1 {
 }*/
 
 nav {
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
     background: rgb(25, 24, 24);
-    background: linear-gradient(180deg, rgba(25, 24, 24, 0.6124824929971988) 17%, rgba(18, 14, 15, 0.4640231092436975) 37%, rgba(25, 22, 23, 0.3295693277310925) 65%, rgba(29, 26, 27, 0.23573179271708689) 76%, rgba(13, 13, 13, 0.16010154061624648) 88%, rgba(37, 35, 36, 0.23433123249299714) 100%);
+    background: linear-gradient(180deg, rgba(25, 24, 24, 0.9) 17%, rgba(18, 14, 15, 0.9) 37%, rgba(25, 22, 23, 0.9) 65%, rgba(29, 26, 27, 0.9) 76%, rgba(13, 13, 13, 0.9) 88%, rgba(37, 35, 36, 0.9) 100%);
     position: fixed;
     top: 0;
     right: 0;
-    white-space: nowrap; /*stopper menu fra at have linebreaks*/
-    padding-right: 20px;
+    white-space: nowrap;
+    /*stopper menu fra at have linebreaks*/
+    width: 100%;
+    height: 50vh;
+    align-items: center;
+    justify-content: space-around;
+    display: none;
 }
 
 
@@ -119,10 +126,10 @@ nav {
 nav a {
     font-family: 'Raleway', sans-serif;
     list-style-type: none font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 3rem;
     text-decoration: none;
     color: white;
-    margin: 10px 0px 0px 10px;
+
 
 }
 
@@ -130,6 +137,107 @@ nav a:hover {
     text-decoration: underline;
     cursor: pointer;
 }
+
+#burgermenu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 55px;
+    height: 45px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+
+}
+
+#burgermenu:hover {
+    cursor: pointer;
+}
+/* taget fra: https://codepen.io/erikterwan/pen/EVzeRP
+* sat på #burgermenu for at skabe animation
+*/
+#burgermenu input {
+    display: block;
+    width: 55px;
+    height: 45px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    -webkit-touch-callout: none;
+}
+
+#burgermenu span {
+    display: block;
+    width: 45px;
+    height: 4px;
+    margin-top: 9px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #cdcdcd; /*burger menu block farve*/
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        opacity 0.55s ease;
+}
+
+#burgermenu span:first-child {
+    transform-origin: 0% 0%;
+}
+
+#burgermenu span:nth-last-child(2) {
+    transform-origin: 50% 50%;
+}
+
+
+#burgermenu input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-14px, -22px); /* makes one part of X*/
+    background: #cdcdcd;
+}
+
+
+#burgermenu input:checked ~ span:nth-last-child(3) {
+    opacity: 0; /* hides one of span so it makes an X shape*/
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+
+#burgermenu input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px); /* makes other part of X*/
+}
+
+
+@media (min-width: 700px) {
+    nav {
+        display: flex !important;
+        /*!important da den ellers ikke ville overide display:none*/
+        background: rgb(25, 24, 24);
+        background: linear-gradient(180deg, rgba(25, 24, 24, 0.6124824929971988) 17%, rgba(18, 14, 15, 0.4640231092436975) 37%, rgba(25, 22, 23, 0.3295693277310925) 65%, rgba(29, 26, 27, 0.23573179271708689) 76%, rgba(13, 13, 13, 0.16010154061624648) 88%, rgba(37, 35, 36, 0.23433123249299714) 100%);
+        flex-direction: row;
+        align-items: center;
+        padding-right: 20px;
+        height: 35px;
+        justify-content: flex-end;
+    }
+
+    nav a {
+        font-size: 1.5rem;
+        margin: 10px 0px 0px 10px;
+    }
+
+    #burgermenu {
+        display: none;
+    }
+}
+
 
 
 /* Styling af om os sektion */
@@ -393,7 +501,7 @@ footer {
 
     nav {
 
-       /* padding-left: 50%;*/
+        /* padding-left: 50%;*/
     }
 
 
